--- a/www/pages/signup.html
+++ b/www/pages/signup.html
@@ -18,7 +18,7 @@
                 <li class="item-content item-input">
                   <div class="item-inner">
                     <div class="item-input-wrap">
-                      <input id="email" type="text" placeholder="Email address">
+                      <input id="email" type="email" placeholder="Email address">
                     </div>
                   </div>
                 </li>
