--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,18 @@
 </head>
 
 <body>
+  <div class="profile-preview">
+    <div class="profile-preview-container visible">
+      <div class="profile-pic"></div>
+      <h2>Bob Ross</h2>
+      <h4>A really cool tagline</h4>
+      <div class="block">
+        <p> lorum ipsum dolor sit amet. lorum ipsum dolor sit amet. lorum ipsum dolor sit amet. lorum ipsum dolor sit amet.</p>
+        <a class="button button-round" onclick="addFreind()">Add Friend</a>
+      </div>
+    </div>
+  </div>
+
   <div id="app">
     <div class="panel panel-left panel-reveal panel-resizable">
       <h2>Connect App Logo</h2>
