User profile updates

--- a/www/pages/profile.html
+++ b/www/pages/profile.html
@@ -13,14 +13,16 @@
       </div>
     </div>
     <img src="media/profile-bump.png" class="profile-bump" style="border-radius: 0" />
-    <div class="profile-pic"></div>
+    <div id="profile-pic" class="profile-pic"></div>
   </div>
   <div class="block no-margin-top">
     <div class="text-align-center no-margin-top">
-      <h2 class="profile-title">Bob wwww</h2>
+      <h2 id="profile-name" class="profile-title"></h2>
 
-      <p class="no-margin-top">Attends <a class="link">School Of Ross</a></p>
+      <p id="profile-tagline" class="no-margin-top"></p>
     </div>
+    <p id="profile-bio" class="no-margin-top"></p>
+
 
   </div>
   <div class="list no-hairlines">
