--- a/www/pages/school_search.html
+++ b/www/pages/school_search.html
@@ -5,15 +5,15 @@
         <a class="link back"><i class="material-icons">arrow_back</i></a>
       </div>
       <div class="title">Find A School</div>
-      <div class="title-large" style="background-color: white">
+      <div class="title-large">
         <div class="title-large-text">Find A School</div>
       </div>
     </div>
   </div>
-  <div class="page-content" style="background-color: #edeff2">
+  <div class="page-content">
     <div class="block no-margin-top">
       <div class="block">
-        <div class="card-block" style="border-radius: 20px; margin: 16px 32px">
+        <div class="search-block" style="border-radius: 20px; margin: 16px 32px">
           <div class="row" style="display:flex; align-items: center;">
             <div class="left" style="margin-left:8px">
               <input id="school-zip" type="text" placeholder="Search">
