--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>Connect App</title>
-  <link rel="stylesheet" href="css/framework7.css">
   <link rel="stylesheet" href="css/framework7.bundle.min.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
@@ -120,7 +119,7 @@
               </a>
             </div>
             <div class="right">
-              <a href="/profile-screen/" class="link icon-only">
+              <a id="profile-icon" href="/profile-screen/" class="link">
                 <i class="material-icons icon">person</i>
               </a>
             </div>
