--- a/www/index.html
+++ b/www/index.html
@@ -247,16 +247,18 @@
               </div>
               <div id="tab-3" class="page-content tab no-padding-top">
                 <div class="block no-margin-top">
-                  <form id="school-searchbar" class="searchbar searchbar-inline">
-                    <div class="searchbar-inner">
-                      <div class="searchbar-input-wrap">
-                        <input type="search" placeholder="Search">
-                        <i class="searchbar-icon"></i>
-                        <span class="input-clear-button"></span>
+                  <div class="search-block no-padding">
+                    <form id="school-searchbar" class="searchbar searchbar-inline">
+                      <div class="searchbar-inner">
+                        <div class="searchbar-input-wrap">
+                          <input type="search" placeholder="Search">
+                          <i class="searchbar-icon"></i>
+                          <span class="input-clear-button"></span>
+                        </div>
+                        <span class="searchbar-disable-button if-not-aurora">Cancel</span>
                       </div>
-                      <span class="searchbar-disable-button if-not-aurora">Cancel</span>
-                    </div>
-                  </form>
+                    </form>
+                  </div>
                   <div id="members-list-skeleton" class="list media-list no-hairlines no-hairlines-between no-margin-top skeleton-text">
                     <ul>
                       <li class="item-content skeleton-effect-pulse">
