--- a/www/pages/new_chat.html
+++ b/www/pages/new_chat.html
@@ -34,50 +34,32 @@
           </li>
         </ul>
       </div>
-      <h2>Add People</h2>
+      <h2>Invite People</h2>
       <div id="chips-div" class="block no-margin-top">
+        <!--
         <div class="chip">
           <div class="chip-media">
             <div class="chip-pic" style="background-image: url('https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png')"></div>
           </div>
-          <div class="chip-label">Jane Smith</div>
+          <div class="chip-label">You</div>
         </div>
+        -->
       </div>
-      <div class="hairline"></div>
-      <form id="new-chat-searchbar" class="searchbar searchbar-inline">
-        <div class="searchbar-inner">
-          <div class="searchbar-input-wrap">
-            <input type="search" placeholder="Search">
-            <i class="searchbar-icon"></i>
-            <span class="input-clear-button"></span>
+
+      <div class="search-block no-padding">
+        <form id="new-chat-searchbar" class="searchbar searchbar-inline">
+          <div class="searchbar-inner">
+            <div class="searchbar-input-wrap">
+              <input type="search" placeholder="Search">
+              <i class="searchbar-icon"></i>
+              <span class="input-clear-button"></span>
+            </div>
+            <span class="searchbar-disable-button if-not-aurora">Cancel</span>
           </div>
-          <span class="searchbar-disable-button if-not-aurora">Cancel</span>
-        </div>
-      </form>
+        </form>
+      </div>
       <div id="new-chat-members-list" class="list members-list searchbar-found no-hairlines no-hairlines-between no-margin-top">
         <ul>
-          <a href="#" onclick="addChip(this)" class="item-link no-chevron" data-uid="test" data-checked="0" data-name="Krombopulos Mike"
-            data-pic="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/dd/dd09204def1578ac0edc13b5ffc1df4b6730f4bd_full.jpg" data-checked="0">
-            <li class="item-content">
-              <div class="item-media">
-                <div class="li-profile-pic" style="background-image: url('https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/dd/dd09204def1578ac0edc13b5ffc1df4b6730f4bd_full.jpg')"></div>
-              </div>
-              <div class="item-inner">Krombopulos Mike</div>
-              <div id="right" class="right"></div>
-            </li>
-          </a>
-          <a href="#" onclick="addChip(this)" class="item-link no-chevron" data-uid="test1" data-checked="0" data-name="Bob Rosspool"
-            data-pic="https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png">
-            <li class="item-content">
-              <div class="item-media">
-                <div class="li-profile-pic" style="background-image: url('https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png')"></div>
-
-              </div>
-              <div class="item-inner">Bob Rosspool</div>
-              <div id="right" class="right"></div>
-            </li>
-          </a>
-
         </ul>
       </div>
       <!-- Nothing found message -->
