Updated school search

--- a/www/pages/school_search.html
+++ b/www/pages/school_search.html
@@ -15,17 +15,16 @@
       <div class="block">
         <div class="search-block" style="border-radius: 20px; margin: 16px 32px">
           <div class="row" style="display:flex; align-items: center;">
-            <div class="left" style="margin-left:8px">
-              <input id="school-zip" type="text" placeholder="Search">
+            <div class="left" style="margin-left:8px; display:flex; align-items: center; justify-content: space-between; width: 100%;">
+              <input id="school-zip" type="text" placeholder="Search" style="width: 90%">
+              <a onclick="searchSchools()" class="link"><i class="material-icons">search</i></a>
             </div>
-            <div class="right" style="display:flex; align-items: center;"><a onclick="searchSchools()" class="link"><i class="material-icons">search</i></a></div>
           </div>
         </div>
       </div>
       <div class="list no-hairlines" style=" background-color: #edeff2">
         <ul id="schools-list" style=" background-color: #edeff2">
-          <p>Search for your school by zip code or school name.</p>
-          <p> e.g. 85024, School of Ross</p>
+          <p>Search for your school by zip code</p>
         </ul>
       </div>
     </div>
