--- a/www/pages/welcome.html
+++ b/www/pages/welcome.html
@@ -5,7 +5,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="slide-content">
-            <img src="media/welcome_screen_1.jpg" width="100%" style="border-radius: 15px" />
+            <img src="media/welcome_screen_1.png" width="100%" style="border-radius: 15px" />
           </div>
           <div class="slide-description">
             <h2>Our Vision</h2>
@@ -15,7 +15,7 @@
         </div>
         <div class="swiper-slide">
           <div class="slide-content">
-            <img src="media/welcome_screen_2.jpg" width="100%" style="border-radius: 15px" />
+            <img src="media/welcome_screen_2.png" width="100%" style="border-radius: 15px" />
           </div>
           <div class="slide-description">
             <h2>Our Mission</h2>
