got sign up to work completled

--- a/www/pages/signup.html
+++ b/www/pages/signup.html
@@ -47,7 +47,7 @@
             </div>
             <div class="block">
               <div class="block-footer">
-                <a class="button button-fill button-round" onclick="signUp()">Sign Up</a>
+                <a class="button button-fill button-round" href="" onclick="signupNext()">Next</a>
                 <p id="newerrmsg" style="color: red;"></p>
                 <p>Already a user? <a href="/login-screen/" class="link">Sign In</a></p>
               </div>
