--- a/www/pages/welcome.html
+++ b/www/pages/welcome.html
@@ -53,7 +53,7 @@
                   </li>
                 </ul>
               </div>
-              <button class="button button-fill button-round" onclick="editUserData()">NEXT</button>
+              <button class="button button-fill button-round" onclick="signUp()">NEXT</button>
               <p id="error-message" style="color: red; text-align: center; padding-top: 8px;"></p>
             </div>
           </div>
