updated school search again

--- a/www/pages/school_search.html
+++ b/www/pages/school_search.html
@@ -13,10 +13,10 @@
   <div class="page-content">
     <div class="block no-margin-top">
       <div class="block">
-        <div class="search-block" style="border-radius: 20px; margin: 16px 32px">
+        <div class="search-block" style="border-radius: 20px; margin: 16px auto; width: 100px;">
           <div class="row" style="display:flex; align-items: center;">
             <div class="left" style="margin-left:8px; display:flex; align-items: center; justify-content: space-between; width: 100%;">
-              <input id="school-zip" type="text" placeholder="Search" style="width: 90%">
+              <input id="school-zip" type="number" placeholder="Search" style="width: 90%">
               <a onclick="searchSchools()" class="link"><i class="material-icons">search</i></a>
             </div>
           </div>
