--- a/www/index.html
+++ b/www/index.html
@@ -360,10 +360,11 @@
     var PPRef = storageRef.child('profile-pictures');
 
     var User; //An objects that contins the user data if the currently signed in user
-    var uid; //the id of the user this is the same as User.uid // TODO: Remove this later
+    var uid; //the id of the user this is the same as User.uid // TODO: Remove this later maybe
 
     /////////authentication section
     firebase.auth().onAuthStateChanged(function(user) { //This function runs every time the users authentication state changes (eg. the user signs in or out)
+
       if (user) { // User is signed in
         uid = user.uid;
         //TODO if user has no school redirict to school selection page//this should actuall be done on sign up. (so just cover as an edge case)
