Fixed Preview Chat, some timestamps, and misc.

--- a/www/pages/profile.html
+++ b/www/pages/profile.html
@@ -10,7 +10,7 @@
     <div class="scrollable">
       <div style="height: 33.33%"></div>
       <div class="card-content">
-        <div class="block no-margin-top" style="padding-top: 16px;">
+        <div class="block no-margin-top no-margin-bottom" style="padding-top: 16px;">
           <div class="text-align-center">
             <h2 id="profile-name" class="profile-title"></h2>
 
