--- a/www/pages/school_search.html
+++ b/www/pages/school_search.html
@@ -1,13 +1,11 @@
 <div class="page" data-page="school-search">
   <div class="navbar">
-    <div class="navbar-inner navbar-inner-large sliding">
+    <div class="navbar-bg"></div>
+    <div class="navbar-inner">
       <div class="left">
         <a class="link back"><i class="material-icons">arrow_back</i></a>
       </div>
       <div class="title">Find A School</div>
-      <div class="title-large">
-        <div class="title-large-text">Find A School</div>
-      </div>
     </div>
   </div>
   <div class="page-content">
