--- a/www/pages/settings.html
+++ b/www/pages/settings.html
@@ -53,7 +53,7 @@
       <div class="hairline"></div>
       <div class="list no-hairlines no-margin-top">
         <ul>
-          <a href="/edit-profile-screen/" class="item-link">
+          <a href="#" onclick="comingSoon()" class="item-link">
             <li class="item-content">
               <div class="item-inner">Change Language</div>
             </li>
