--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -9,12 +9,11 @@
     </div>
   </div>
   <div class="page-content">
-    <div class="block no-margin-top">
-      <h1>About</h1>
+    <div class="block">
       <div class="text-align-center">
-        <img src="media/logo.png" style="height: 100px; background-color:black">
-        <h2>Connect App</h2>
-        <p>Version 0.1</p>
+        <img src="media/logo.png" style="height: 100px; border-radius: 0">
+        <h2>sit with us</h2>
+        <p>Version 1.0</p>
         <p>&copy; 2019 Overstep LLC. All rights reserved<p>
       </div>
 
