--- a/www/pages/preview_chat.html
+++ b/www/pages/preview_chat.html
@@ -1,49 +1,27 @@
-<div class="page" data-page="preview-chat">
+<div class="page" data-page="chat">
   <div class="panel panel-right panel-reveal panel-resizable">
     <div class="list no-hairlines">
       <div class="list-title">Members</div>
-      <ul>
-        <a href="#" class="item-link no-chevron">
-          <li class="item-content">
-            <div class="item-media"><i class="material-icons">person</i></div>
-            <div class="item-inner">Krombopulos Mike</div>
-          </li>
-        </a>
-        <a href="#" class="item-link no-chevron">
-          <li class="item-content">
-            <div class="item-media"><i class="material-icons">person</i></div>
-            <div class="item-inner">Jane Smith</div>
-          </li>
-        </a>
-
+      <ul id="chat-members">
       </ul>
     </div>
   </div>
-  <div class="navbar no-shadow">
+  <div class="navbar">
     <div class="navbar-inner">
       <div class="left"><a class="link back icon-only"><i class="material-icons">arrow_back</i></a></div>
-      <div class="title">Chat Name</div>
-
+      <div id="group-name" class="title">Chat Group Name</div>
       <div class="right"><a href="#" class="link panel-open icon-only" data-panel="right"><i class="material-icons">people</i></a></div>
     </div>
   </div>
-
-  <div class="chat-description">
-    <div class="hairline"></div>
-    <p>this is a chat description. this is a chat description. this is a chat description. this is a chat description. this is a chat description.</p>
+  <div style="background-color: rgba(0,0,0,0)" class="toolbar toolbar-bottom no-shadow">
+    <a onclick="subscribeToChat(User.uid,currentChat)" class="button button-fill button-round">Join Chat</a>
   </div>
+  <div class="page-content messages-content infinite-scroll-content infinite-scroll-top">
+    <div class="preloader infinite-scroll-preloader"></div>
+    <div class="messages chatroom-messages">
+      <!-- Messages title -->
 
-
-  <div class="toolbar toolbar-bottom">
-    <div class="toolbar-inner justify-content-center">
-      <a onclick="subscribeToChat(User.uid,currentChat)" class="link">Subscribe to Chat</a>
-    </div>
-  </div>
-
-
-  <div class="page-content messages-content">
-
-    <div class="messages">
+      <!-- Messages -->
 
     </div>
   </div>
