--- a/www/pages/signup.html
+++ b/www/pages/signup.html
@@ -43,13 +43,23 @@
                     </div>
                   </div>
                 </li>
+                <li class="item-content item-input">
+                  <div class="item-inner">
+                    <div class="item-input-wrap">
+                      <input id="age" type="number" placeholder="Age">
+                    </div>
+                  </div>
+                </li>
+
               </ul>
             </div>
             <div class="block">
               <div class="block-footer">
+
                 <a class="button button-fill button-round" href="" onclick="signUp()">Next</a>
-                <p id="newerrmsg" style="color: red;"></p>
+                <p>By signing up, you agree to the <br><a href="#" class="link no-ripple">terms and conditions</a></p>
                 <p>Already a user? <a href="/login-screen/" class="link">Sign In</a></p>
+                <p id="newerrmsg" style="color: red;"></p>
               </div>
             </div>
           </form>
